--- a/index.html
+++ b/index.html
@@ -16,38 +16,27 @@
         type: Phaser.AUTO,
         width: window.innerWidth,
         height: window.innerHeight,
-        physics: { default: "arcade", arcade: { gravity: { y: 500 }, debug: false } },
-        scene: { preload, create, update }
+        scene: {
+            preload: preload,
+            create: create,
+            update: update
+        }
     };
 
     let startButton, volumeText, character;
     let gameStarted = false;
     let cameraMoving = false;
-    let reachedLand = false;
-    let cursors;
-    let cameraSpeed = 6;
-    let land;
+    let cameraSpeed = 2;
 
     const game = new Phaser.Game(config);
 
     function preload() {
-        // No assets needed for now
+        // No assets needed for now, just using colors and text
     }
 
     function create() {
-        // Set initial underwater background
+        // Set background to underwater color
         this.cameras.main.setBackgroundColor("#1E3A5F");
-
-        // Start camera position underwater
-        this.cameras.main.scrollY = config.height;
-
-        // Add land (positioned above water)
-        land = this.add.rectangle(0, 0, config.width * 2, 200, 0x228B22).setOrigin(0);
-        this.physics.add.existing(land, true); // Static ground
-
-        // Placeholder character (red underwater, pink on land)
-        character = this.physics.add.rectangle(config.width / 2, config.height + 100, 50, 100, 0xff0000);
-        character.body.setCollideWorldBounds(true);
 
         // Add placeholder "bubbles" (moving circles)
         this.bubbles = this.add.group();
@@ -81,9 +70,8 @@
             fill: "#FFFFFF"
         });
 
-        // Player controls
-        cursors = this.input.keyboard.createCursorKeys();
-        this.physics.add.collider(character, land);
+        // Placeholder character (rectangle)
+        character = this.add.rectangle(config.width / 2, config.height + 100, 50, 100, 0xff0000);
     }
 
     function update() {
@@ -97,31 +85,9 @@
         });
 
         // Move camera up when transitioning
-        if (cameraMoving && this.cameras.main.scrollY > 0) {
+        if (cameraMoving && this.cameras.main.scrollY > -config.height) {
             this.cameras.main.scrollY -= cameraSpeed;
             character.y -= cameraSpeed;
-        }
-
-        // Change scene when reaching land
-        if (!reachedLand && this.cameras.main.scrollY <= 0) {
-            reachedLand = true;
-            this.cameras.main.setBackgroundColor("#87CEEB"); // Change to sky
-            character.setFillStyle(0xff69b4); // Change character to pink
-        }
-
-        // WASD Movement on land
-        if (reachedLand) {
-            if (cursors.left.isDown) {
-                character.body.setVelocityX(-200);
-            } else if (cursors.right.isDown) {
-                character.body.setVelocityX(200);
-            } else {
-                character.body.setVelocityX(0);
-            }
-
-            if (cursors.up.isDown && character.body.blocked.down) {
-                character.body.setVelocityY(-300); // Jump
-            }
         }
     }
 </script>
